Closed
Bug 1672463
Opened 5 years ago
Closed 5 years ago
Rollout WebRender to AMD Evergreen on Release
Categories
(Core :: Graphics: WebRender, defect, P1)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
84 Branch
People
(Reporter: aosmond, Assigned: aosmond)
References
Details
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
We are already shipping to early beta and have since the summer.
Assignee | ||
Updated•5 years ago
|
status-firefox82:
--- → disabled
status-firefox83:
--- → affected
Assignee | ||
Comment 1•5 years ago
|
||
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4560e96e79fc
Rollout WebRender to AMD Evergreen on Release. r=jrmuizel
Comment 3•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox84:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Assignee | ||
Comment 4•5 years ago
•
|
||
Comment on attachment 9183250 [details]
Bug 1672463 - Rollout WebRender to AMD Evergreen on Release.
Beta/Release Uplift Approval Request
- User impact if declined: Evergreen users won't get WebRender in late beta or release.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): We are already shipping in early beta. Can only truly verify in late beta builds.
- String changes made/needed:
Attachment #9183250 -
Flags: approval-mozilla-beta?
Comment 5•5 years ago
|
||
Comment on attachment 9183250 [details]
Bug 1672463 - Rollout WebRender to AMD Evergreen on Release.
Approved for 83 beta 5, thanks.
Attachment #9183250 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 6•5 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•