Bug 1672463 - Rollout WebRender to AMD Evergreen on Release. r=jrmuizel, a=pascal

Differential Revision: https://phabricator.services.mozilla.com/D94475